tolk-tester/tests/invalid-syntax/err-3820.tolk
fun main() {
    return "hello\k";
}

/**
@compilation_should_fail
@stderr invalid escape sequence \k
 */
